# EITN30

./: .gitignore  Cargo.toml  Makefile  ProjectGoals.md  README.md  UpdatedGoals.md
.cargo/: config.toml
.github/workflows/: clippy.yml  rust.yml  rustfmt.yml
RPIconfig/: config.txt  sysctl.conf
scripts/: base.sh  base_setup.sh  mobile_setup.sh  setcap.sh
src/: lib.rs  main.rs  rxloop.rs  txloop.rs
