[package]
name = "eitn_30"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nrf24l01 = { git = "https://github.com/soppelmann/rust-nrf24.git" }
tun2 = "1.3.0"
color-eyre = "0.6.3"
packet = "0.1"

[package.metadata.cross.build]
default-target = "armv8-unknown-linux-gnueabihf"
