[package]
name = "eitn_30"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
nrf24l01 = { git = "https://github.com/soppelmann/rust-nrf24.git" }
tun2 = "1.3.0"
color-eyre = "0.6.3"
current_platform = "0.2.0"
packet = "0.1"
